<resources>
    <string name="firebase_google_client_id">1034136726990-dfmcc2g8p9pe5qgaqp96knorf2631q3n.apps.googleusercontent.com</string>
    <string name="app_name">UnseenFamily</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="donation_history">Donation History</string>
    <string name="message">Message</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="my_request">My Request</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="description_hint">Enter Description (e.g. purpose of this request, total approximate cost etc…)</string>
    <string name="add_request">Add Request</string>
    <string name="view_request">View Request</string>
    <string name="needed_items">Needed Items</string>
    <string name="needed_list_hint">Specific brand</string>
    <string name="quantity_hint">Qty</string>
    <string name="add">Add</string>
    <string name="title_hint">Enter title (e.g.: Daily Supplies)</string>
    <string name="delete">Delete</string>
    <string name="no_record">No Record Found</string>
    <string name="sync">Sync</string>
    <string name="title_required">Title is require</string>
    <string name="description_required">Description is require</string>
    <string name="items_required">Needed Items cannot be empty</string>

    <string name="email">Type your Email</string>
    <string name="password">Type Your Password</string>
    <string name="retype_password">Retype Your Password</string>
    <string name="not_account">Not Registered Yet , Sign Up !</string>
    <string name="got_account">Already Registered , Sign In !</string>
    <string name="or">or</string>
    <string name="sign_with_google">Sign In With Google</string>
    <string name="save">Save</string>

    <string name="enter_message">Enter Message</string>
    <string name="item_added">Item Added</string>
    <string name="new_donation_added">New Donation Request Added</string>
    <string name="empty_field">Empty Fields Are not Allowed !!</string>
    <string name="google_sign_in_fail">Google sign in failed</string>
    <string name="password_not_matching">Password is not matching</string>


    <string name="all_request">All Requests</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>

    <string name="chat_with_admin">Chat With Admin</string>

    <string name="edit_profile">Edit Profile</string>

    <string name="name">Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="family_size">Family Size</string>

    <string name="name_hint">Enter Name</string>
    <string name="contact_no_hint">Enter Contact No.</string>
    <string name="family_size_hint">Enter Family Size</string>

</resources>